# InvoluntaryAdministrationTool

./: .gitmodules  CMakeLists.txt  Makefile  README.md
agent/: CMakeLists.txt
agent/include/: common.h
agent/src/: agent.c  main.c
